# dioxus-audio

./: .editorconfig  CONTEXT.md  Cargo.toml  README.md  dagger.toml  deny.toml  devenv.nix
.github/workflows/: dagger-demo.yaml  demo.yaml
assets/: dioxus-audio.css
demo/: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  dagger-module.toml  dagger.dang  dagger.toml  package-lock.json  package.json  playwright.Caddyfile  playwright.config.ts  screenshots.mjs  wrangler.toml
demo/e2e/: audio-controls.spec.ts  composable-controls.spec.ts  decoding.spec.ts  devices.spec.ts  fixtures.ts  graph-playback.spec.ts  live-analysis.spec.ts  playback.spec.ts  recorder.spec.ts  recording.spec.ts  responsive-controls.spec.ts  routes.spec.ts  styles.spec.ts  waveform-data.spec.ts
demo/snippets/: quickstart.rs  styles_setup.rs
demo/src/: app.rs  examples.rs  main.rs  pages.rs  style.css
demo/src/components/: code.rs  common.rs  examples.rs  layout.rs  nav.rs
demo/src/examples/: analysis.rs  decoding.rs  devices.rs  live_analysis.rs  playback.rs  recorder.rs  visualizers.rs  waveforms.rs
demo/src/examples/styles/: daisy.rs  fixtures.rs  mod.rs  scoped.css  scoped.rs  studio.css  studio.rs
demo/src/pages/: analysis.rs  decoding.rs  devices.rs  home.rs  not_found.rs  playback.rs  recorder.rs  styles.rs  visualizers.rs  waveforms.rs
src/: analysis.rs  components.rs  decoding.rs  devices.rs  error.rs  lib.rs  playback.rs  recorder.rs  types.rs  waveform.rs
src/components/: devices.rs  player.rs  recorder.rs  visualizer.rs  waveform.rs
src/decoding/: web.rs
src/playback/: web.rs
src/recorder/: web.rs
tests/: analysis.rs  components.rs  decoding.rs  devices.rs  playback.rs  recorder.rs  styles.rs  waveform.rs
