[package]
name = "dioxus-audio"
version = "0.1.1"
description = "Audio recording, playback, analysis, and UI components for Dioxus"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sagikazarmark/dioxus-audio"
homepage = "https://github.com/sagikazarmark/dioxus-audio"
keywords = ["dioxus", "audio", "microphone", "waveform"]
categories = ["multimedia::audio", "gui", "wasm"]
publish = false

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["lib"] }
dioxus-icons = "0.1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-timers = { version = "0.4", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AnalyserNode",
    "AudioContext",
    "BaseAudioContext",
    "Blob",
    "BlobEvent",
    "BlobPropertyBag",
    "ConstrainDomStringParameters",
    "DomException",
    "Element",
    "Event",
    "EventTarget",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaDevices",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "MediaStreamAudioSourceNode",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaTrackConstraints",
    "Navigator",
    "Performance",
    "Url",
    "Window",
] }

[dev-dependencies]
dioxus-ssr = "0.7"
wasm-bindgen-test = "0.3"
