[package]
name = "demo"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
dioxus-audio = { path = ".." }

dioxus = { version = "0.7", default-features = false, features = [
    "asset",
    "document",
    "hooks",
    "html",
    "launch",
    "macro",
    "router",
    "signals",
    "web",
] }
dioxus-code = { version = "0.1", features = ["lang-css"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Location",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "Url",
    "Window",
] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[workspace]
